--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "axios": "^1.7.9",
+    "leaflet": "^1.9.4",
+    "leaflet-wms-header": "^1.0.13",
     "nuxt": "^3.15.2",
     "primevue": "^4.2.5",
     "vue": "latest",
