--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "nuxt-app",
+  "name": "homeease_panel",
   "private": true,
   "type": "module",
+  "config": {
+    "nuxt": {
+      "port": "4000",
+      "host": "0.0.0.0"
+    }
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "pm2 start npm --name homeease_panel -- start"
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
