--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "deploy": "PORT=4000 pm2 start npm --name homeease_panel -- start"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.10.1",
     "@primevue/themes": "^4.2.5",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "leaflet-wms-header": "^1.0.13",
+    "lodash": "^4.17.21",
     "nuxt": "^3.15.2",
     "primevue": "^4.2.5",
     "vue": "latest",
